# hyphae

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  audit.toml  install.sh
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  coverage.yml  performance.yml  release.yml
config/: default.toml
crates/hyphae-cli/: Cargo.toml
crates/hyphae-cli/src/: bench_data.rs  bench_knowledge.rs  cli.rs  config.rs  display.rs  extract.rs  init.rs  main.rs  paths.rs  project.rs  watch.rs
crates/hyphae-cli/src/commands/: activity.rs  analytics.rs  audit.rs  audit_secrets.rs  backup.rs  bench.rs  changelog.rs  codex_notify.rs  consolidate.rs  context.rs  docs.rs  doctor.rs  evaluate.rs  export.rs  export_training.rs  feedback.rs  import.rs  import_claude_memory.rs  lessons.rs  memoir.rs  memory.rs  mod.rs  project.rs  protocol.rs  prune.rs  purge.rs  self_update.rs  session.rs  transcript.rs
crates/hyphae-core/: Cargo.toml
crates/hyphae-core/src/: artifact.rs  chunk.rs  chunk_store.rs  embedder.rs  error.rs  fastembed_embedder.rs  git_context.rs  http_embedder.rs  identity.rs  ids.rs  lib.rs  memoir.rs  memoir_store.rs  memory.rs  sanitize.rs  secrets.rs  store.rs
crates/hyphae-core/tests/: surface.rs
crates/hyphae-ingest/: Cargo.toml
crates/hyphae-ingest/src/: chunker.rs  lib.rs  readers.rs  rhizome.rs  session.rs  transcript.rs
crates/hyphae-mcp/: Cargo.toml
crates/hyphae-mcp/src/: lib.rs  memory_protocol.rs  protocol.rs  server.rs  text.rs
crates/hyphae-mcp/src/tools/: artifact.rs  context.rs  dispatch.rs  ingest.rs  memoir.rs  memory.rs  mod.rs  onboard.rs  schema.rs  session.rs
crates/hyphae-mcp/src/tools/memory/: evaluate.rs  helpers.rs  lessons.rs  maintenance.rs  recall.rs  store.rs
crates/hyphae-mcp/tests/: contract_surface.rs
crates/hyphae-store/: Cargo.toml
crates/hyphae-store/benches/: retrieval_hot_paths.rs
crates/hyphae-store/src/: lib.rs  schema.rs
crates/hyphae-store/src/store/: artifact.rs  audit.rs  chunk_store.rs  context.rs  evaluation.rs  export.rs  feedback.rs  helpers.rs  insights.rs  memoir_store.rs  memory_store.rs  mod.rs  passive.rs  project.rs  purge.rs  search.rs  session.rs
docs/: ARCHITECTURE.md  CLI-REFERENCE.md  EMBEDDING-MODELS.md  FEATURES.md  FEEDBACK-LOOP-DESIGN.md  GUIDE.md  INTERNALS.md  MCP-TOOLS.md  PRODUCT.md  README.md  ROADMAP.md  SETUP-BY-TOOL.md  TRAINING-DATA.md  TROUBLESHOOTING.md  architecture.md  cli-reference.md  features.md  guide.md  mcp-tools.md  product.md  roadmap.md  scope.md  setup-by-tool.md  training-data.md  troubleshooting.md
docs/handoffs/: RUNNER-STATUS.md
docs/handoffs/completed/: CODE-CONTEXT-TERM-EXPANSION-IMPLEMENTER.md  CODE-CONTEXT-TERM-EXPANSION-VALIDATOR.md  CONTEXT-AWARE-RECALL.md  SEARCH-ALL-IDENTITY-V1-SCOPING.md
docs/plans/: README.md
scripts/: release.sh
scripts/hooks/: hyphae-post-tool.sh  hyphae-precompact.sh  hyphae-session-end.sh
