[workspace]
resolver = "2"
members = [
  "crates/hyphae-core",
  "crates/hyphae-store",
  "crates/hyphae-mcp",
  "crates/hyphae-cli",
  "crates/hyphae-ingest",
]

[profile.dev]
opt-level = 1
debug = "line-tables-only"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
# Database
rusqlite = { version = "0.39", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }

# Embeddings (optional)
# Use rustls-tls to avoid pulling in openssl-sys (cross-compile to
# aarch64-unknown-linux-musl fails without OpenSSL headers for the target).
fastembed = { version = "4", default-features = false, features = [
    "ort-download-binaries",
    "hf-hub-rustls-tls",
] }

# Regex
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Utils
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
directories = "6"

# Ecosystem
spore = { git = "https://github.com/basidiocarp/spore", tag = "v0.4.9" }
