[package]
name = "hyphae-cli"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "Permanent memory for AI agents"
license = "MIT"
repository = "https://github.com/basidiocarp/hyphae"
keywords = ["memory", "ai-agents", "mcp", "llm", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "hyphae"
path = "src/main.rs"

[features]
default = ["embeddings"]
embeddings = ["hyphae-core/embeddings", "hyphae-mcp/embeddings", "hyphae-ingest/embeddings"]

[dependencies]
hyphae-core = { path = "../hyphae-core" }
hyphae-store = { path = "../hyphae-store" }
hyphae-mcp = { path = "../hyphae-mcp" }
hyphae-ingest = { path = "../hyphae-ingest", default-features = false }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
chrono = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = "8"
ctrlc = { version = "3", features = ["termination"] }

[dev-dependencies]
tempfile = "3"
