[package]
name = "hyphae-cli"
version = "0.10.9"
edition = "2024"
rust-version = "1.85"
description = "Permanent memory for AI agents"
license = "MIT"
repository = "https://github.com/basidiocarp/hyphae"
keywords = ["memory", "ai-agents", "mcp", "llm", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "hyphae"
path = "src/main.rs"

[features]
default = ["embeddings"]
embeddings = ["hyphae-core/embeddings", "hyphae-mcp/embeddings", "hyphae-ingest/embeddings"]

[dependencies]
hyphae-core = { path = "../hyphae-core" }
hyphae-store = { path = "../hyphae-store" }
hyphae-mcp = { path = "../hyphae-mcp" }
hyphae-ingest = { path = "../hyphae-ingest", default-features = false }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
chrono = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ureq = "3"
tempfile = "3"
notify = "8"
ctrlc = { version = "3", features = ["termination"] }
rusqlite = { workspace = true }
which = "7"
sha2 = "0.10"
regex = { workspace = true }
spore = { workspace = true }

[package.metadata.deb]
maintainer = "William Newton"
license-file = ["../../LICENSE", "0"]
extended-description = "Persistent memory system for AI coding agents"
section = "utility"
priority = "optional"
assets = [
  ["target/release/hyphae", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/hyphae", dest = "/usr/bin/hyphae", mode = "755" },
]
