[package]
name = "hyphae-core"
version = "0.10.2"
edition = "2024"
rust-version = "1.85"
description = "Core types and traits for Hyphae persistent memory"
license = "MIT"
repository = "https://github.com/basidiocarp/hyphae"

[features]
default = []
embeddings = ["fastembed"]

[dependencies]
chrono = { workspace = true }
directories = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
ureq = { version = "3", features = ["json"] }
fastembed = { workspace = true, optional = true }
