[package]
name = "hyphae-ingest"
version = "0.10.11"
edition = "2024"
rust-version = "1.85"
description = "Document ingestion and chunking for Hyphae"
license = "MIT"

[dependencies]
hyphae-core = { path = "../hyphae-core" }
walkdir = "2"
regex = "1"
chrono = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
spore = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["embeddings"]
embeddings = ["hyphae-core/embeddings"]
