[package]
name = "hyphae-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
default = []
embeddings = ["hyphae-core/embeddings"]

[dependencies]
hyphae-core = { path = "../hyphae-core" }
hyphae-store = { path = "../hyphae-store" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
