[package]
name = "hyphae-store"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
hyphae-core = { path = "../hyphae-core" }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
