[package]
name = "hyphae-store"
version = "0.4.2"
edition = "2024"
rust-version = "1.85"
description = "SQLite storage backend for Hyphae persistent memory"
license = "MIT"
repository = "https://github.com/basidiocarp/hyphae"

[dependencies]
hyphae-core = { path = "../hyphae-core" }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tempfile = "3"
