[package]
name = "hyphae-store"
version = "0.10.10"
edition = "2024"
rust-version = "1.85"
description = "SQLite storage backend for Hyphae persistent memory"
license = "MIT"
repository = "https://github.com/basidiocarp/hyphae"

[dependencies]
hyphae-core = { path = "../hyphae-core" }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }
zerocopy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "retrieval_hot_paths"
harness = false
